# bgesav

./: Cargo.toml  README.md
bgesav-derive/: Cargo.toml
bgesav-derive/src/: lib.rs
libbgesav/: Cargo.toml
libbgesav/src/: datum.rs  lib.rs
libbgesav/src/datum/: hovercraft.rs  map.rs  mapid.rs  mdisks.rs  party.rs  party_follow_state.rs  party_present.rs  repr.rs
src/: bitmanip_yet_again.rs  main.rs  metadata.rs  sally_idx.rs  ui.rs
src/metadata/: inventory.rs  map.rs  mdisk.rs  password.rs
