[package]
name = "bgesav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
libbgesav = { path = "libbgesav" }
open = "5.0.0"
rfd = "0.11.4"
steamlocate = "1.2.1"

[workspace]
members = ["libbgesav"]
