[package]
name = "bgesav"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
eframe = "0.31.0"
libbgesav = { path = "libbgesav" }
open = "5.0.0"
steamlocate = "2.0"
egui-file-dialog = "0.9.0"

[workspace]
members = ["libbgesav"]
